removed an unecessary <form> tag to consolidate code and fix css error. added borders for text areas. still require btn overlap fix.

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -9,7 +9,7 @@ textarea{
   border: none;
   resize: none;
   color: #000000;
-  border-left: 1px solid black;
+  border: 1px solid white;
   padding: 10px;
 }
 
